# JMED-LLM

./: README.md  pyproject.toml
configs/: config_template.yaml
datasets/: crade.csv  jcsts.csv  jmmlu_med.csv  mrdr.csv  mrmr.csv  mrner_disease.csv  mrner_medicine.csv  nrner.csv  rrtnm.csv
datasets/all/: CRADE.csv  CRNER.csv  NRNER.csv  RRNER.csv  SMDIS.csv
datasets/v1/: smdis.csv
datasets/v1/all/: JMMLU-Med.csv  RRTNM.csv
scripts/: evaluate.py
src/: evaluator.py  utils.py
